# mephisto-archive

./: Cargo.toml  README.md  licenserc.toml  rust-toolchain.toml
.github/: semantic.yml
.github/workflows/: ci.yml
src/mephisto/: Cargo.toml
src/mephisto/examples/: sample.rs
src/mephisto/src/: acceptor.rs  commander.rs  env.rs  leader.rs  lib.rs  message.rs  process.rs  pvalue.rs  replica.rs  scout.rs
src/portal/: Cargo.toml
src/portal/src/: lib.rs
src/raft/: Cargo.toml  build.rs  eraftpb.proto
src/raft/benches/: benches.rs
src/raft/benches/suites/: mod.rs  progress.rs  raft.rs  raw_node.rs
src/raft/src/: config.rs  errors.rs  lib.rs  log_unstable.rs  raft.rs  raft_log.rs  raw_node.rs  read_only.rs  status.rs  storage.rs  util.rs
src/raft/src/confchange/: changer.rs  mod.rs  restore.rs  tests.rs
src/raft/src/confchange/goldenfiles/: joint_autoleave.txt  joint_idempotency.txt  joint_learners_next.txt  joint_safety.txt  simple_idempotency.txt  simple_promote_demote.txt  simple_safety.txt  zero.txt
src/raft/src/proto/: confchange.rs  confstate.rs  mod.rs
src/raft/src/quorum/: joint.rs  majority.rs  mod.rs  tests.rs
src/raft/src/quorum/goldenfiles/: joint_commit.txt  joint_group_commit.txt  joint_vote.txt  majority_commit.txt  majority_vote.txt
src/raft/src/tracker/: inflights.rs  mod.rs  progress.rs  state.rs
src/raft/tests/: raft_tests.rs
src/raft/tests/failpoints_cases/: mod.rs
src/raft/tests/harness/: interface.rs  mod.rs  network.rs  util.rs
src/raft/tests/integration_cases/: mod.rs  test_raft.rs  test_raft_flow_control.rs  test_raft_paper.rs  test_raft_snap.rs  test_raw_node.rs
src/raftsrv/: Cargo.toml
src/raftsrv/examples/: raftstore.rs
src/raftsrv/src/: lib.rs  node.rs  server.rs  service.rs
src/raftstore/: Cargo.toml  build.rs  datatree.proto
src/raftstore/examples/: raftstore.rs
src/raftstore/src/: datatree.rs  lib.rs  node.rs  proto.rs  (+4 more)
src/server/: Cargo.toml  build.rs
(+12 files in other folders)
