# Copyright 2023 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "mephisto-raft"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[features]
failpoints = ["fail/failpoints"]

[dependencies]
bytes = "1.4.0"
enum-iterator = "1.4.1"
fxhash = "0.2.1"
fail = "0.5.1"
getset = "0.1.1"
prost = "0.12.1"
thiserror = "1.0"
rand = "0.8.5"
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.71"
criterion = "0.5.1"
goldenfile = "1.4.5"
itertools = "0.11.0"
regex = "1.8.4"
tracing-subscriber = "0.3.17"

[build-dependencies]
prost-build = "0.12.1"
protobuf-src = "1.1.0"
