[package]
name = "mephisto-raftsrv"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
mephisto-raft = { path = "../raft" }

anyhow = "1.0.75"
crossbeam = "0.8.2"
futures = "0.3.29"
prost = "0.12.1"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[dev-dependencies]
rayon = "1.7.0"
tracing-subscriber = "0.3.17"
